--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -125,11 +125,12 @@
                     <div class="px-5 text-center text-gray-500 dark:text-gray-400">or</div>
                     <div class="w-full h-0.5 bg-gray-200 dark:bg-gray-700"></div>
                 </div>
-                <form class="space-y-4 lg:space-y-6" action="#">
+                <form class="space-y-4 lg:space-y-6" action="{% url 'account_login' %}" method="post">
+                    {% csrf_token %}
                     <div>
                         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
                             email</label>
-                        <input type="email" name="email" id="email"
+                        <input type="email" name="login" id="login"
                             class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-green-500 focus:border-green-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
                             placeholder="name@company.com" required="">
                     </div>
@@ -157,8 +158,8 @@
                             password?</a>
                     </div>
                     <button type="submit"
-                        class="w-full text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Create
-                        an account</button>
+                        class="w-full text-white bg-green-600 hover:bg-green-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Sign
+                        In</button>
                     <p class="text-sm font-light text-gray-500 dark:text-gray-400 text-center">
                         Don't have an account? <a href="{% url 'account_signup' %}"
                             class="font-medium text-green-600 hover:underline dark:text-green-500">Sign up
