--- a/templates/dashboard/components/navigation/navbar.html
+++ b/templates/dashboard/components/navigation/navbar.html
@@ -243,8 +243,16 @@
                             class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
                             id="user-menu-button-2" aria-expanded="false" data-dropdown-toggle="dropdown-2">
                             <span class="sr-only">Open user menu</span>
-                            <img class="w-8 h-8 rounded-full"
-                                src="https://flowbite.com/docs/images/people/profile-picture-5.jpg" alt="user photo">
+                            {% if user.socialaccount_set.exists %}
+                            <img class="w-8 h-8 rounded-full" src="{{ user.socialaccount_set.first.get_avatar_url }}"
+                                alt="{{ user.username }}'s photo">
+                            {% else %}
+                            <div
+                                class="relative inline-flex items-center justify-center w-8 h-8 overflow-hidden bg-gray-600 rounded-full">
+                                <span class="font-medium text-white">
+                                    {{ user.username|make_list|first|upper }}</span>
+                            </div>
+                            {% endif %}
                         </button>
                     </div>
 
