--- a/templates/dashboard/leads.html
+++ b/templates/dashboard/leads.html
@@ -397,28 +397,26 @@
             </button>
         </h2>
         <div id="sentiment-score-body" class="hidden" aria-labelledby="sentiment-score-heading">
-            <div class="flex items-center py-2 space-x-3 font-light border-b border-gray-200 dark:border-gray-600">
-                <select id="price-from"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
-                    <option disabled="" selected="">From</option>
-                    <option>$500</option>
-                    <option>$2500</option>
-                    <option>$5000</option>
-                </select><select id="price-to"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
-                    <option disabled="" selected="">To</option>
-                    <option>$500</option>
-                    <option>$2500</option>
-                    <option>$5000</option>
-                </select>
+
+            <div
+                class="col-span-2 py-2 flex items-center justify-between space-x-3 font-light border-b border-gray-200 dark:border-gray-600">
+                <input type="number" id="min-price-input" min="0" max="7000"
+                    class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-green-500 focus:ring-green-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-green-500 dark:focus:ring-green-500 "
+                    placeholder="-" required />
+
+                <div class="shrink-0 text-sm font-medium dark:text-gray-300">to</div>
+
+                <input type="number" id="max-price-input" value="3500" min="0" max="7000"
+                    class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-green-500 focus:ring-green-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-green-500 dark:focus:ring-green-500"
+                    placeholder="" required />
             </div>
         </div>
         <!-- Worldwide Shipping -->
-        <h2 id="worldwide-shipping-heading">
+        <h2 id="engagement-score-heading">
             <button type="button"
                 class="flex items-center justify-between w-full py-2 px-1.5 text-sm font-medium text-left text-gray-500 border-b border-gray-200 dark:border-gray-600 dark:text-gray-400 hover:bg-gray-50 dark:hover:bg-gray-700"
-                data-accordion-target="#worldwide-shipping-body" aria-expanded="true"
-                aria-controls="worldwide-shipping-body">
+                data-accordion-target="#engagement-score-body" aria-expanded="true"
+                aria-controls="engagement-score-body">
                 <span>Engagement Score</span>
                 <svg aria-hidden="true" data-accordion-icon="" class="w-5 h-5 rotate-180 shrink-0" fill="currentColor"
                     viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -427,45 +425,18 @@
                 </svg>
             </button>
         </h2>
-        <div id="worldwide-shipping-body" class="hidden" aria-labelledby="worldwide-shipping-heading">
-            <div class="py-2 space-y-2 font-light border-b border-gray-200 dark:border-gray-600">
-                <label class="relative flex items-center cursor-pointer">
-                    <input type="checkbox" value="" class="sr-only peer" name="shipping" checked="">
-                    <div
-                        class="w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-primary-300 dark:peer-focus:ring-primary-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-primary-600">
-                    </div>
-                    <span class="ml-3 text-sm font-medium text-gray-900 dark:text-gray-300">North
-                        America</span>
-                </label>
-                <label class="relative flex items-center cursor-pointer">
-                    <input type="checkbox" value="" class="sr-only peer" name="shipping">
-                    <div
-                        class="w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-primary-300 dark:peer-focus:ring-primary-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-primary-600">
-                    </div>
-                    <span class="ml-3 text-sm font-medium text-gray-900 dark:text-gray-300">South
-                        America</span>
-                </label>
-                <label class="relative flex items-center cursor-pointer">
-                    <input type="checkbox" value="" class="sr-only peer" name="shipping">
-                    <div
-                        class="w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-primary-300 dark:peer-focus:ring-primary-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-primary-600">
-                    </div>
-                    <span class="ml-3 text-sm font-medium text-gray-900 dark:text-gray-300">Asia</span>
-                </label>
-                <label class="relative flex items-center cursor-pointer">
-                    <input type="checkbox" value="" class="sr-only peer" name="shipping" checked="">
-                    <div
-                        class="w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-primary-300 dark:peer-focus:ring-primary-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-primary-600">
-                    </div>
-                    <span class="ml-3 text-sm font-medium text-gray-900 dark:text-gray-300">Australia</span>
-                </label>
-                <label class="relative flex items-center cursor-pointer">
-                    <input type="checkbox" value="" class="sr-only peer" name="shipping">
-                    <div
-                        class="w-9 h-5 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-primary-300 dark:peer-focus:ring-primary-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-primary-600">
-                    </div>
-                    <span class="ml-3 text-sm font-medium text-gray-900 dark:text-gray-300">Europe</span>
-                </label>
+        <div id="engagement-score-body" class="hidden" aria-labelledby="engagement-score-heading">
+            <div
+                class="col-span-2 py-2 flex items-center justify-between space-x-3 font-light border-b border-gray-200 dark:border-gray-600">
+                <input type="number" id="min-price-input" value="300" min="0" max="7000"
+                    class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-green-500 focus:ring-green-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-green-500 dark:focus:ring-green-500 "
+                    placeholder="" required />
+
+                <div class="shrink-0 text-sm font-medium dark:text-gray-300">to</div>
+
+                <input type="number" id="max-price-input" value="3500" min="0" max="7000"
+                    class="block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 focus:border-green-500 focus:ring-green-500 dark:border-gray-600 dark:bg-gray-800 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-green-500 dark:focus:ring-green-500"
+                    placeholder="" required />
             </div>
         </div>
 
