--- a/templates/dashboard/components/leads/lead_items.html
+++ b/templates/dashboard/components/leads/lead_items.html
@@ -47,45 +47,27 @@
                 </td>
 
                 <td class="px-4 py-3">
-                    {% if lead.category == 'hot' %}
                     <span
-                        class="inline-flex items-center bg-red-100 text-red-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-red-900 dark:text-red-300">
-                        <span class="w-2 h-2 me-1 bg-red-500 rounded-full"></span>
-                        {{ lead.category|title }}
-                    </span>
-                    {% elif lead.category == 'warm' %}
-                    <span
-                        class="inline-flex items-center bg-yellow-100 text-yellow-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-yellow-900 dark:text-yellow-300">
-                        <span class="w-2 h-2 me-1 bg-yellow-500 rounded-full"></span>
-                        {{ lead.category|title }}
-                    </span>
-                    {% else %}
-                    <span
-                        class="inline-flex items-center bg-blue-100 text-blue-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">
-                        <span class="w-2 h-2 me-1 bg-blue-500 rounded-full"></span>
-                        {{ lead.category|title }}
-                    </span>
-                    {% endif %}
+                        class="bg-green-100 text-green-800 text-xs font-medium px-2 py-0.5 rounded dark:bg-green-900 dark:text-green-300">
+                        {{ lead.status|title }}</span>
                 </td>
                 <td class="px-4 py-3">
                     {% if lead.category == 'hot' %}
-                    <span
-                        class="inline-flex items-center bg-red-100 text-red-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-red-900 dark:text-red-300">
-                        <span class="w-2 h-2 me-1 bg-red-500 rounded-full"></span>
+
+                    <div class="flex items-center">
+                        <div class="h-3 w-3 rounded-full inline-block mr-2 bg-red-500"></div>
                         {{ lead.category|title }}
-                    </span>
+                    </div>
                     {% elif lead.category == 'warm' %}
-                    <span
-                        class="inline-flex items-center bg-yellow-100 text-yellow-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-yellow-900 dark:text-yellow-300">
-                        <span class="w-2 h-2 me-1 bg-yellow-500 rounded-full"></span>
+                    <div class="flex items-center">
+                        <div class="h-3 w-3 rounded-full inline-block mr-2 bg-yellow-500"></div>
                         {{ lead.category|title }}
-                    </span>
+                    </div>
                     {% else %}
-                    <span
-                        class="inline-flex items-center bg-blue-100 text-blue-800 text-xs font-medium px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300">
-                        <span class="w-2 h-2 me-1 bg-blue-500 rounded-full"></span>
+                    <div class="flex items-center">
+                        <div class="h-3 w-3 rounded-full inline-block mr-2 bg-blue-500"></div>
                         {{ lead.category|title }}
-                    </span>
+                    </div>
                     {% endif %}
                 </td>
                 <td class="px-4 py-3">{{ lead.sentiment_score|floatformat:0 }}</td>
